[SCA-2026] minor improvements